--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,7 @@ jobs:
         env:
             GITHUB_OAUTH: ${{ secrets.DEPLOY_KEY }}
             WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+            CF_API_KEY: ${{secrets.CURSEFORGE_TOKEN}}
 
         steps:
             - name: Clone project
